@@ -29,6 +29,7 @@ New user-visible features
 
 Bugs fixed
 ----------
+- Bug 1552 - Storing log name inside LogComponent class (NS_LOG) as std::string
 - Bug 1722 - beacons transmitted concurrently
 - Bug 1616 - WifiPhyStateHelper reports false CCA_BUSY times at State trace source
 - Bug 1011 - assert failed. file=../src/devices/wifi/dcf-manager.cc
